[package]
name = "tea_arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
windows = "0.42.0"
features = [
	"Win32_Foundation",
	"Win32_System_Memory",
	"Win32_System_SystemInformation",
	"Win32_System_Diagnostics_Debug"
]

[dev-dependencies]
bumpalo = "3.11.1"